objects/revcult__Shield_Accelerator_Job__c.object
<CustomObject>
    <fields>
        <fullName>revcult__All_Clear__c</fullName>
        <label>All Clear</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__All_Job_Ids__c</fullName>
        <description>Contains ids for all the apex jobs that ran as part of PEA</description>
        <encryptionScheme>None</encryptionScheme>
        <label>All Job Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Apex_Job_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Api_Version__c</fullName>
        <label>Api Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Batch_Count__c</fullName>
        <label>Batch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Batch_Denominator__c</fullName>
        <label>Batch Denominator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Batch_Numerator__c</fullName>
        <label>Batch Numerator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Blocked_by_Configuration__c</fullName>
        <label>Blocked by Configuration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Blocked_by_Platform__c</fullName>
        <label>Blocked by Platform</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Encrypted_by_Shield__c</fullName>
        <label>Encrypted by Shield</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Excluded__c</fullName>
        <label>Excluded</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Had_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Had Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Run_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>revcult__Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__Selected__c</fullName>
        <label>Selected</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revcult__Total_Field_Count__c</fullName>
        <label>Total Field Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Use_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Salesforce Files</label>
        <type>Checkbox</type>
    </fields>
    <label>Shield Accelerator Job</label>
    <listViews>
        <fullName>revcult__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{000}</displayFormat>
        <label>Shield Encryption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shield Accelerator Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>